Fixed overflow on screen width

--- a/src/styling/index.css
+++ b/src/styling/index.css
@@ -8,6 +8,7 @@ body, html {
   height: 100%;
   cursor: auto;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 .cursor-default, .cursor-default * {
